# phantom-ai

./: .firebaserc  .gitignore  firebase.json  package-lock.json  package.json
.firebase/: hosting.b3V0.cache
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  utils.rs
desktop/src-tauri/src/ai/: engine.rs  mod.rs  ollama.rs
desktop/src-tauri/src/audio/: capture.rs
desktop/src-tauri/src/ocr/: mod.rs
desktop/src-tauri/src/stt/: deepgram.rs  mod.rs  whisper_local.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BeforeAfter.tsx  Comparison.tsx  CursorGlow.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InteractiveDynamicIsland.tsx  Navbar.tsx  PageEntrance.tsx  Platforms.tsx  Pricing.tsx  ScrollProgress.tsx  Stats.tsx  Testimonials.tsx  Ticker.tsx  Waitlist.tsx
